--- a/header.css
+++ b/header.css
@@ -1,7 +1,8 @@
 body{margin : 0px; width: 100%;}
-header{width: 100%;height: 100px; background-color: whitesmoke;margin-bottom:0px;position: fixed;}
+header{width: 100%;height: 60px; background-color: rgb(247,247,247);margin-bottom:0px;position: fixed;}
 .marginssage{float: right; display: inline;}
-.b1{width: 150px; height: 100px; background-color: rgba(0, 0, 0, 0);border-radius: 15px;; border: none; transition: background-color 0.5s; outline: none;}
-.b1:hover{background-color: rgba(82%, 82%, 82%, 100%);}
+.b1{width: 60px; height: 60px; background-color: rgba(0, 0, 0, 0);border-radius: 15px;; border: none; transition: background-color 0.5s, color 0.5s; outline: none;}
+.b1:hover{background-color: rgba(82%, 82%, 82%, 100%);color:white;}
+.b1:visited{color:white;}
 
 
